objects/CloudingoAgent__AccountContact__c.object
<CustomObject>
    <fields>
        <fullName>CloudingoAgent__AccountRecordCount__c</fullName>
        <label>AccountRecordCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__Account_Notes__c</fullName>
        <label>Account Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__Alternate_Phone__c</fullName>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ContactRecordCount__c</fullName>
        <label>ContactRecordCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__Contact_Type__c</fullName>
        <label>Contact Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__LeadRecordCount__c</fullName>
        <label>LeadRecordCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SalesForce_User__c</fullName>
        <label>SalesForce User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__UserRecordCount__c</fullName>
        <label>UserRecordCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AccountContact</label>
    <listViews>
        <fullName>Nolan_Daigle_AccountContact</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>AccountContact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccountContacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>